--- a/ProjectBackend/ProjectBackend.csproj
+++ b/ProjectBackend/ProjectBackend.csproj
@@ -21,6 +21,7 @@
     <Folder Include="Areas\AdminPanel\Data\" />
     <Folder Include="Areas\AdminPanel\Models\" />
     <Folder Include="Areas\AdminPanel\Views\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
